libs/@local/hashql/hir/tests/ui/lower/checking/type-assertion-unrelated.jsonc
//@ run: fail
//@ description: Test that input inference for the default works
["is", { "#literal": 42 }, "String"]
//~^ ERROR Type mismatch in this expression
